@startuml

class Cart {
  {static} - instance: Cart
  - items: List<Item>
  - LOGGER: Logger
  - Cart()
  + addItem(product: Product, quantity: int): void
  + removeItem(product: Product): void
  {static} + getInstance(): Cart
  + getTotalPrice(): double
  + getItems(): List<Item>
  + clearItems(): void
}

class Catalog {
  - products: List<Product>
  + addProduct(product: Product): void
  + removeProduct(product: Product): void
  + getProducts(): List<Product>
}

class Item {
  - product: Product
  - quantity: int
  + Item(product: Product, quantity: int)
  + getProduct(): Product
  + getQuantity(): int
  + setQuantity(quantity: int): void
  + equals(o: Object): boolean
  + hashCode(): int
}

class Order {
  - items: List<Item>
  - totalPrice: double
  + Order(items: List<Item>)
  + calculateTotalPrice(): double
  + getItems(): List<Item>
  + getTotalPrice(): double
}

class OrderService {
  - paymentService: PaymentService
  + OrderService(paymentService: PaymentService)
  + placeOrder(cart: Cart): Order
  + generateOrderSummary(order: Order): String
}

class PaymentService {
  - paymentGateway: PaymentGateway
  + PaymentService(paymentGateway: PaymentGateway)
  + makePayment(amount: double): boolean
}

interface PaymentGateway {
  + processPayment(amount: double): boolean
}

class MockPaymentGateway implements PaymentGateway {
  + processPayment(amount: double): boolean
}

class Product {
  - name: String
  - price: double
  - description: String
  + Product(name: String, price: double, description: String)
  + getName(): String
  + getPrice(): double
  + getDescription(): String
}

class ProductFactory {
  + createProduct(name: String, price: double, description: String): Product
}

class User {
  - username: String
  - hashedPassword: String
  - cart: Cart
  + User(username: String, password: String)
  + getUsername(): String
  + getHashedPassword(): String
  + getCart(): Cart
}

class AuthenticationService {
  - users: Map<String, User>
  + registerUser(username: String, password: String): void
  + authenticate(username: String, password: String): User
}

class PasswordUtil {
  + hashPassword(password: String): String
}

Cart "0..1" -- "0..*" Item
Catalog *-- "0..*" Product
Order *-- "0..*" Item
User *-- "1" Cart
OrderService *-- "1" PaymentService
PaymentService *-- "1" PaymentGateway
AuthenticationService *-- "1..*" User

@enduml
